--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,8 +52,8 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\GameManager.cs" />
+     <Compile Include="Assets\Scripts\MyTile.cs" />
      <Compile Include="Assets\Scripts\Ship.cs" />
-     <Compile Include="Assets\Scripts\TileManager.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
